Efficient and Better Indexed Query System